# haldir

./: .gitignore  .ncp-consumer  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  formal.yml
contracts/vectors/: CHECKSUMS.sha256  README.md  haldir-intent-v1.cbor.hex
crates/haldir-admission/: Cargo.toml
crates/haldir-admission/src/: error.rs  lib.rs  manifest.rs  record.rs  snapshot.rs  types.rs
crates/haldir-contracts/: Cargo.toml
crates/haldir-contracts/src/: action.rs  cbor.rs  challenge.rs  deployment.rs  digest.rs  error.rs  ids.rs  intent.rs  lease.rs  lib.rs  limits.rs  macros.rs  publication.rs  receipt.rs  revocation.rs  scalar.rs  session.rs  status.rs  tests_contracts.rs
crates/haldir-core/: Cargo.toml
crates/haldir-core/src/: lib.rs  snapshot.rs  time.rs
crates/haldir-crypto/: Cargo.toml
crates/haldir-crypto/examples/: emit_interop_vectors.rs
crates/haldir-crypto/src/: cose.rs  error.rs  key.rs  lib.rs  role.rs  trust.rs
crates/haldir-deployment/: Cargo.toml
crates/haldir-deployment/src/: artifact.rs  contract.rs  error.rs  lib.rs  source.rs  tests.rs  verify.rs
crates/haldir-durable/: Cargo.toml
crates/haldir-durable/src/: error.rs  file.rs  lib.rs  local_anchor.rs  mac.rs  snapshot.rs
crates/haldir-evidence/: Cargo.toml
crates/haldir-evidence/src/: gate_journal.rs  journal.rs  lib.rs  manager.rs  publication.rs
crates/haldir-gate/: Cargo.toml
crates/haldir-gate/examples/: live_gate_dev_bind_shutdown.rs  live_gate_dev_fixture_provision.rs
crates/haldir-gate/examples/live_gate_dev_support/: mod.rs
crates/haldir-gate/src/: actor.rs  lib.rs  live_service.rs  main.rs  publication_coordinator.rs  startup.rs
crates/haldir-gate/tests/: live_service_api.rs
crates/haldir-ncp08/: Cargo.toml
crates/haldir-ncp08/src/: adapter.rs  compatibility.rs  conversion.rs  error.rs  lib.rs  real.rs  selection.rs
crates/haldir-ncp08/tests/data/ncp-v0.8.0/: README.md  command_frame.json  command_frame.schema.json
crates/haldir-policy-native/: Cargo.toml
crates/haldir-policy-native/src/: decide.rs  input.rs  lib.rs  output.rs  policy.rs
crates/haldir-range/: Cargo.toml
crates/haldir-range/src/: lib.rs
crates/haldir-reference-plant/: Cargo.toml
crates/haldir-reference-plant/src/: lib.rs  types.rs
crates/haldir-state/: Cargo.toml
crates/haldir-state/src/: anti_rollback.rs  challenge.rs  clock.rs  durable.rs  fault.rs  gate_process.rs  lib.rs  mission.rs  output_stream.rs  replay.rs  revision.rs  session.rs
crates/haldir-testkit/: Cargo.toml
crates/haldir-testkit/src/: lib.rs
crates/haldir-transport-zenoh/: Cargo.toml
crates/haldir-transport-zenoh/examples/: live_secure_acl_campaign.rs
crates/haldir-transport-zenoh/src/: keys.rs  lib.rs  live.rs
deploy/secure-reference-v1/: README.md  profile.json
docs/: ASSURANCE-PROFILES.md  AUTHORITY-GRAPH.md  CLAIM-LEDGER.md  COMPLETION-CHECKLIST.md  DEPENDENCY-RATIONALE.md  EVIDENCE-SEMANTICS.md  HALDIR-DISCUSSION-DECISIONS-2026.md  HALDIR-NCP-V0.8.0-TRIPLE-CHECKED-AUDIT-AND-IMPLEMENTATION-SPECIFICATION-2026.md  HALDIR-PROJECT-AUDIT-2026.md  IMPLEMENTATION-PUNCHLIST.md  LIMITATIONS.md  NCP-COMPATIBILITY.md  PROJECT-CATALOG.md  RESEARCH-PROTOCOL.md  ROADMAP-STATUS.md  THREAT-MODEL.md  galadriels-mirror.md  pid-security-and-communication.md
docs/adr/: 0001-fail-closed-gate-originated-authority.md  0002-deterministic-cbor-and-cose.md  0003-error-vs-deny-outcomes.md  0004-fixed-point-token-bucket.md  0005-interval-union-duty.md  0006-elapsed-time-slew.md  0007-p0-scope-and-deferrals.md  README.md
docs/release/0.9.0/: AUTHORITY-CONTRACT.md  MIGRATION.md  PROTECTION-MODEL.md  README.md  THREAT-MODEL.md
evidence/: README.md
evidence/11-secure-zenoh-live/: README.md  checksums.sha256  commands.json  manifest.json  pki.json  result.json
evidence/11-secure-zenoh-live/configs/: render-manifest.json  router-launch.json  router.json5
evidence/11-secure-zenoh-live/fixtures/: no-certificate.json
evidence/11-secure-zenoh-live/logs/: docker-metadata.json
evidence/12-live-gate-dev-smoke/: README.md  checksums.sha256  commands.json  manifest.json  pki.json
evidence/12-live-gate-dev-smoke/logs/: docker-metadata.json
evidence/12-live-gate-dev-smoke/results/: bind-result.json  provision-result.json
evidence/source-review/: source-ledger.md
formal/: HaldirAuthority.cfg  HaldirAuthority.tla  README.md
release/0.9.0/: allowed-signers  audit-inputs.json  authority-model.json  protection-model.json  requirements.json
tools/: live_gate_dev_smoke.py  live_secure_zenoh.py  p0r-exit-gate.sh  pins.toml  render-secure-zenoh.py  run-live-gate-dev-smoke.py  run-live-secure-zenoh.py  secure_zenoh.py  test_live_gate_dev_smoke.py  test_live_gate_dev_smoke_verifier.py  test_live_secure_zenoh.py  test_secure_zenoh.py  verify-ci-pins.py  verify-claims.py  verify-evidence.py  verify-generated.py  verify-live-gate-dev-smoke.py  verify-live-secure-zenoh.py  verify-pins.py  verify-secure-zenoh.py
tools/haldir-ctl/: Cargo.toml
tools/haldir-ctl/src/: main.rs
tools/interop/: README.md  vectors.json  verify_cose.py
tools/live-gate-dev-smoke/: Dockerfile  Dockerfile.dockerignore
tools/live-secure-zenoh/: Dockerfile  Dockerfile.dockerignore  README.md
tools/release/: current-audit-gate.sh  current-audit-resource-profile.py  current-file-review-ledger.py  current-file-review-packets.py  current-public-surface-inventory.py  current_audit_test_fixtures.py  generate-task-evidence.py  test_current_audit_resource_profile.py  test_current_file_review_ledger.py  test_current_file_review_packets.py  test_current_public_surface_inventory.py  test_generate_task_evidence.py  test_verify_audit_inputs.py  test_verify_authority_model.py  test_verify_current_audit.py  test_verify_current_audit_fr_0002.py  test_verify_current_audit_fr_0003.py  test_verify_protection_model.py  verify-audit-inputs.py  verify-authority-model.py  verify-current-audit.py  verify-protection-model.py  verify-task-evidence.py
(+129 files in other folders)
