[package]
name = "haldir-contracts"
description = "Haldir Gate — haldir-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
sha2.workspace = true
subtle.workspace = true

[dev-dependencies]
proptest.workspace = true
