[package]
name = "haldir-core"
description = "Haldir Gate — haldir-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
haldir-contracts.workspace = true

[dev-dependencies]
proptest.workspace = true
