[package]
name = "haldir-crypto"
description = "Haldir Gate — haldir-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
haldir-contracts.workspace = true
ed25519-compact.workspace = true
sha2.workspace = true
zeroize.workspace = true
subtle.workspace = true
getrandom.workspace = true

[dev-dependencies]
proptest.workspace = true
