[package]
name = "haldir-deployment"
description = "Strict signed deployment-package and artifact verification primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
haldir-contracts.workspace = true
haldir-crypto.workspace = true

[dev-dependencies]
proptest.workspace = true
