[package]
name = "haldir-durable"
description = "Haldir authenticated durable-state primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
hmac.workspace = true
sha2.workspace = true
zeroize.workspace = true
