[package]
name = "haldir-evidence"
description = "Haldir Gate — haldir-evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
haldir-contracts.workspace = true
haldir-crypto.workspace = true
sha2.workspace = true

[dev-dependencies]
haldir-testkit.workspace = true
