[package]
name = "haldir-gate"
description = "Haldir Gate — composed one-vehicle authorization runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
real-ncp = ["haldir-ncp08/real-ncp"]
live-zenoh = [
    "real-ncp",
    "dep:haldir-transport-zenoh",
    "dep:tokio",
    "haldir-transport-zenoh/live-zenoh",
]
live-gate-dev-smoke = ["live-zenoh", "dep:serde_json", "tokio/rt"]

[[bin]]
name = "haldir-gate"
path = "src/main.rs"

[[example]]
name = "live_gate_dev_fixture_provision"
path = "examples/live_gate_dev_fixture_provision.rs"
required-features = ["live-gate-dev-smoke"]

[[example]]
name = "live_gate_dev_bind_shutdown"
path = "examples/live_gate_dev_bind_shutdown.rs"
required-features = ["live-gate-dev-smoke"]

[dependencies]
haldir-contracts.workspace = true
haldir-crypto.workspace = true
haldir-core.workspace = true
haldir-state.workspace = true
haldir-policy-native.workspace = true
haldir-admission.workspace = true
haldir-ncp08.workspace = true
haldir-reference-plant.workspace = true
haldir-evidence.workspace = true
haldir-durable.workspace = true
haldir-transport-zenoh = { workspace = true, optional = true }
getrandom.workspace = true
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
