[package]
name = "haldir-ncp08"
description = "Haldir Gate — haldir-ncp08"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
haldir-contracts.workspace = true
haldir-core.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
