[package]
name = "haldir-ncp08"
description = "Haldir Gate — haldir-ncp08"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
real-ncp = ["dep:ncp-core", "dep:serde_json"]

[dependencies]
haldir-contracts.workspace = true
haldir-core.workspace = true
sha2.workspace = true
ncp-core = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
