[package]
name = "haldir-reference-plant"
description = "Haldir Gate — haldir-reference-plant"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
haldir-contracts.workspace = true
haldir-core.workspace = true

[dev-dependencies]

