[package]
name = "haldir-testkit"
description = "Haldir Gate — haldir-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
haldir-contracts.workspace = true
haldir-crypto.workspace = true
ed25519-compact.workspace = true
getrandom.workspace = true

[dev-dependencies]

