[package]
name = "haldir-transport-zenoh"
description = "Haldir Gate — haldir-transport-zenoh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
haldir-contracts.workspace = true

[dev-dependencies]

