[package]
name = "haldir-transport-zenoh"
description = "Haldir Gate — haldir-transport-zenoh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
live-zenoh = [
    "dep:haldir-ncp08",
    "haldir-ncp08/real-ncp",
    "dep:serde_json",
    "dep:tokio",
    "dep:zenoh",
]

[dependencies]
haldir-ncp08 = { workspace = true, optional = true }
ncp-core.workspace = true
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
zenoh = { workspace = true, optional = true }

[dev-dependencies]
haldir-contracts.workspace = true

[[example]]
name = "live_secure_acl_campaign"
required-features = ["live-zenoh"]
